--- a/Le site web/form.html
+++ b/Le site web/form.html
@@ -55,7 +55,7 @@
       <h1>Book Interpretation</h1>
       <form>
         <label for="name">Name Text:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name"><button type="submit">Click Here</button><br><br> <br>
+        <input type="text" id="name" name="name" placeholder="Enter the book name"><button type="submit">Click Here</button><br><br> <br>
         <label for="sum">summary</label>
         <input type="text" id="sum=" name="sum">
       </form>
